Fixed too small font size.

--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -11,15 +11,15 @@ textarea {
 }
 
 #tag_cloud {
-  line-height: 1.6em;
-  .css1 { font-size: 0.7em; }
-  .css2 { font-size: 0.8em; }
-  .css3 { font-size: 0.9em; }
-  .css4 { font-size: 1.0em; }
-  .css5 { font-size: 1.1em; }
-  .css6 { font-size: 1.2em; }
-  .css7 { font-size: 1.3em; }
-  .css8 { font-size: 1.4em; }
-  .css9 { font-size: 1.5em; }
-  .css10 { font-size: 1.6em; }
+  line-height: 2em;
+  .css1 { font-size: 1.0em; }
+  .css2 { font-size: 1.1em; }
+  .css3 { font-size: 1.2em; }
+  .css4 { font-size: 1.3em; }
+  .css5 { font-size: 1.4em; }
+  .css6 { font-size: 1.5em; }
+  .css7 { font-size: 1.6em; }
+  .css8 { font-size: 1.7em; }
+  .css9 { font-size: 1.8em; }
+  .css10 { font-size: 1.9em; }
 }
