--- a/public/stylesheets/compiled/entries.css
+++ b/public/stylesheets/compiled/entries.css
@@ -6,24 +6,24 @@ textarea {
   height: 300px; }
 
 #tag_cloud {
-  line-height: 1.6em; }
+  line-height: 2em; }
   #tag_cloud .css1 {
-    font-size: 0.7em; }
-  #tag_cloud .css2 {
-    font-size: 0.8em; }
-  #tag_cloud .css3 {
-    font-size: 0.9em; }
-  #tag_cloud .css4 {
     font-size: 1.0em; }
-  #tag_cloud .css5 {
+  #tag_cloud .css2 {
     font-size: 1.1em; }
-  #tag_cloud .css6 {
+  #tag_cloud .css3 {
     font-size: 1.2em; }
-  #tag_cloud .css7 {
+  #tag_cloud .css4 {
     font-size: 1.3em; }
-  #tag_cloud .css8 {
+  #tag_cloud .css5 {
     font-size: 1.4em; }
-  #tag_cloud .css9 {
+  #tag_cloud .css6 {
     font-size: 1.5em; }
-  #tag_cloud .css10 {
+  #tag_cloud .css7 {
     font-size: 1.6em; }
+  #tag_cloud .css8 {
+    font-size: 1.7em; }
+  #tag_cloud .css9 {
+    font-size: 1.8em; }
+  #tag_cloud .css10 {
+    font-size: 1.9em; }
